# atri_onebot

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
default_config/: config.toml
src/: config.rs  handler.rs  http.rs  lib.rs  websocket.rs
src/data/: action.rs  contact.rs  event.rs  message.rs  mod.rs  notice.rs
