[package]
name = "atri_onebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
atri_plugin = "0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0"

actix-web-httpauth = "0"

[dependencies.actix-web]
version = "4"
features = ["rustls"]

[dependencies.tokio]
version = "1"
features = [
    "rt-multi-thread",
    "signal"
]

[profile.release]
lto = "thin"
strip = true
codegen-units = 1