[package]
name = "atri_onebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
atri_plugin = "0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0"
toml = "0"

uuid = { version = "1", features = ["v4", "fast-rng"] }

actix-ws = "0"
actix-web-httpauth = "0"

[dependencies.actix-web]
version = "4"
features = ["macros"]
default-features = false

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]

[profile.release]
lto = true
strip = true
codegen-units = 1